--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,77 +1,137 @@
-@import 'https://fonts.googleapis.com/css?family=Open+Sans:300,400,600';
+@import "https://fonts#googleapis#com/css?family=Open+Sans:300,400,600";
 
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-size: 62.5%;
+  font-size: 62.5%;
 }
 
 section {
-    background: linear-gradient(180deg, #e2e7ff 0%, #f8e1ff 100%);
-    padding: 2rem;
-    height: 100vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: start;
-    font-family: "open sans", sans-serif;
+  background: linear-gradient(180deg, #e2e7ff 0%, #f8e1ff 100%);
+  padding: 2rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  font-family: "open sans", sans-serif;
+  height: 100vw;
 }
 
-.container {
-    width: 50%;
+#container {
+  max-width: 500px;
 }
 
-.header h1 {
-    width: 100%;
-    font-weight: bolder;
-    font-size: 1.6rem;
-    text-align: center;
+#header h1 {
+  width: 100%;
+  font-weight: bolder;
+  font-size: 1.6rem;
+  text-align: center;
 }
 
-.header p{
-    width: 100%;
-    font-size: 1rem;
-    font-weight: 600;
-    text-align: center;
-    opacity: 0.5;
+#header p {
+  width: 100%;
+  font-size: 1rem;
+  font-weight: 600;
+  text-align: center;
+  opacity: 0.5;
 }
 
-.category-menu {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2rem;
-    gap: 1rem;
+#category-menu {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 2rem;
+  gap: 1rem;
 }
 
-.category-menu button {
-    background: #fff;
-    border: none;
-    padding: 0.5rem 1rem;
-    border-radius: 1rem;
-    font-size: 1rem;
-    font-weight: 600;
-    cursor: pointer;
+#category-menu button {
+  background: #fff;
+  border: none;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
 }
 
-.search-bar {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 2rem;
-    gap: 1rem;
-    background-color: aqua;
+#category-menu button:hover {
+  background: linear-gradient(90deg, #a2db95, #24ccaa);
+  color: #fff;
 }
 
+#pokemon-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 2rem;
+  overflow-y: scroll;
+  scroll-behavior: smooth;
+  width: 400px;
+  height: 400px;
+}
 
-.search-bar input {
-    padding: 0.5rem 1rem;
-    border: none;
-    border-radius: 1rem;
-    font-size: 1rem;
-    font-weight: 600;
-    background-color: rgb(0, 0, 0, 0);
+#search-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 2rem;
+  background-color: #fff;
+  padding: 0.5rem;
+  border-radius: 5rem;
+}
+
+#search-bar input {
+  width: 100%;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 1rem;
+  font-size: 1rem;
+  font-weight: 600;
+  background-color: rgb(0, 0, 0, 0);
+  outline: none;
+  color: #757575;
+}
+
+#search-bar button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: linear-gradient(90deg, #a2db95, #24ccaa);
+  color: rgba(255, 255, 255);
+  border: none;
+  width: 2.5rem;
+  height: 2.5rem;
+  border-radius: 10rem;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+  border-radius: 1rem;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 1rem;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 1rem;
+  transition: all 0.3s;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
 }
