--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,11 +17,12 @@ section {
   justify-content: space-between;
   align-items: start;
   font-family: "open sans", sans-serif;
-  height: 100vw;
+  height: 100vh;
 }
 
 #container {
-  max-width: 500px;
+  padding: 1rem;
+  max-width: 50%;
 }
 
 #header h1 {
@@ -67,18 +68,22 @@ section {
   flex-wrap: wrap;
   justify-content: center;
   gap: 1rem;
-  margin-top: 2rem;
+  margin: 2rem 0;
   overflow-y: scroll;
   scroll-behavior: smooth;
-  width: 400px;
-  height: 400px;
+  max-height: 425px;
+}
+
+form {
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
 
 #search-bar {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-top: 2rem;
   background-color: #fff;
   padding: 0.5rem;
   border-radius: 5rem;
@@ -104,34 +109,109 @@ section {
   background: linear-gradient(90deg, #a2db95, #24ccaa);
   color: rgba(255, 255, 255);
   border: none;
-  width: 2.5rem;
-  height: 2.5rem;
-  border-radius: 10rem;
-  font-size: 1rem;
+  width: 30px;
+  height: 30px;
+  border-radius: 100%;
+  font-size: 1.3rem;
   font-weight: 600;
   cursor: pointer;
   transition: all 0.3s;
 }
 
-::-webkit-scrollbar {
-  width: 10px;
+#showcase-container {
+  background-image: url(/assets/img/Pokedex_Background.png);
+  background-size: contain;
+  background-position: center;
+  width: 100%;  
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 1rem;
 }
 
-/* Track */
+#showcase {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.selected-pokemon {
+  transition: transform 0.3s ease; 
+}
+
+.selected-pokemon:hover {
+  animation: jump 0.2s ease;
+}
+
+#info {
+    margin-bottom: 2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    color: #fff;
+    font-size: 1.8rem;
+}
+
+#showcase-image {
+  width: 350px;
+  height: 350px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#showcase-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+#details-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: linear-gradient(90deg, #a2db95, #24ccaa);
+  color: rgba(255, 255, 255);
+  border: none;
+  padding: 1rem 2.5rem;
+  border-radius: 2rem;
+  font-size: 1.6rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+
+.pokemon-name {
+  font-size: 3rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+@keyframes jump {
+  0% { transform: translateY(0); }
+  50% { transform: translateY(-10px); } 
+  100% { transform: translateY(0); }
+}
+
+::-webkit-scrollbar {
+  width: 1rem;
+  border-radius: 1rem;
+}
+
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
   border-radius: 1rem;
 }
 
-/* Handle */
 ::-webkit-scrollbar-thumb {
-  background: #888;
+  background: linear-gradient(#a2db95, #24ccaa);
   border-radius: 1rem;
-  transition: all 0.3s;
+  transition: all .5s;
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
-  background: #555;
+  background: linear-gradient(90deg, #a2db95, #24ccaa);
 }
