--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
+/* Import */
 @import "https://fonts#googleapis#com/css?family=Open+Sans:300,400,600";
 
+/* General Resets */
 * {
   padding: 0;
   margin: 0;
@@ -10,25 +12,62 @@ html {
   font-size: 62.5%;
 }
 
+/* Scrollbar Styles */
+::-webkit-scrollbar {
+  width: 0.5rem;
+  border-radius: 1rem;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 1rem;
+}
+
+::-webkit-scrollbar-thumb {
+  background: linear-gradient(#a2db95, #24ccaa);
+  border-radius: 1rem;
+}
+
+/* Keyframes */
+@keyframes jump {
+  0% {
+    transform: translateY(0);
+  }
+  50% {
+    transform: translateY(-10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+/* Section */
 section {
   background: linear-gradient(180deg, #e2e7ff 0%, #f8e1ff 100%);
   padding: 2rem;
   display: flex;
+  gap: 2rem;
   justify-content: space-between;
   align-items: start;
-  font-family: "open sans", sans-serif;
+  font-family: "Open Sans", sans-serif;
   height: 100vh;
 }
 
+/* Container */
 #container {
-  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 0 1rem;
   max-width: 50%;
+  height: 100%;
 }
 
+/* Header */
 #header h1 {
   width: 100%;
   font-weight: bolder;
-  font-size: 1.6rem;
+  font-size: 2rem;
   text-align: center;
 }
 
@@ -40,46 +79,28 @@ section {
   opacity: 0.5;
 }
 
-#category-menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 2rem;
-  gap: 1rem;
-}
-
-#category-menu button {
-  background: #fff;
-  border: none;
-  padding: 0.5rem 1rem;
-  border-radius: 1rem;
-  font-size: 1rem;
-  font-weight: 600;
-  cursor: pointer;
-}
-
-#category-menu button:hover {
-  background: linear-gradient(90deg, #a2db95, #24ccaa);
-  color: #fff;
-}
-
+/* Pokemon List */
 #pokemon-list {
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
   gap: 1rem;
-  margin: 2rem 0;
+  margin-bottom: auto;
+  padding: 1rem;
   overflow-y: scroll;
   scroll-behavior: smooth;
-  max-height: 425px;
+  justify-content: space-between;
 }
 
+/* Form */
 form {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
 }
 
+/* Search Bar */
 #search-bar {
   display: flex;
   justify-content: space-between;
@@ -87,14 +108,14 @@ form {
   background-color: #fff;
   padding: 0.5rem;
   border-radius: 5rem;
+  margin: 2rem 0;
 }
 
 #search-bar input {
   width: 100%;
-  padding: 0.5rem 1rem;
+  padding: 1rem 1rem;
   border: none;
   border-radius: 1rem;
-  font-size: 1rem;
   font-weight: 600;
   background-color: rgb(0, 0, 0, 0);
   outline: none;
@@ -109,20 +130,21 @@ form {
   background: linear-gradient(90deg, #a2db95, #24ccaa);
   color: rgba(255, 255, 255);
   border: none;
-  width: 30px;
-  height: 30px;
+  width: 4rem;
+  height: 4rem;
   border-radius: 100%;
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   font-weight: 600;
   cursor: pointer;
   transition: all 0.3s;
 }
 
+/* Showcase Container */
 #showcase-container {
   background-image: url(/assets/img/Pokedex_Background.png);
   background-size: contain;
   background-position: center;
-  width: 100%;  
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
@@ -137,24 +159,30 @@ form {
   flex-direction: column;
 }
 
+/* Selected Pokemon */
 .selected-pokemon {
-  transition: transform 0.3s ease; 
+  object-position: center;
+  transition: transform 0.3s ease;
 }
 
 .selected-pokemon:hover {
   animation: jump 0.2s ease;
 }
 
+/* Info */
 #info {
-    margin-bottom: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    color: #fff;
-    font-size: 1.8rem;
+  margin-bottom: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  color: #fff;
+  font-size: 1.8rem;
+  backdrop-filter: blur(1px);
+  width: 100%;
 }
 
+/* Showcase Image */
 #showcase-image {
   width: 350px;
   height: 350px;
@@ -169,7 +197,9 @@ form {
   object-fit: contain;
 }
 
-#details-button {
+/* Buttons */
+#details-button,
+#show-more-button {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -177,41 +207,39 @@ form {
   background: linear-gradient(90deg, #a2db95, #24ccaa);
   color: rgba(255, 255, 255);
   border: none;
+  cursor: pointer;
+  transition: all 0.3s;
+  width: 100%;
+}
+
+#details-button {
   padding: 1rem 2.5rem;
-  border-radius: 2rem;
+  border-radius: 3rem;
+  font-size: 2rem;
+  font-weight: bold;
+}
+
+#details-button:hover {
+  color: #24ccaa;
+  border: 0.25rem solid #24ccaa;
+  background: linear-gradient(90deg, #fff, #f0f0f0);
+}
+
+#show-more-button {
+  padding: 1.5rem;
+  border-radius: 5rem;
   font-size: 1.6rem;
   font-weight: bold;
-  cursor: pointer;
+}
+
+#show-more-button:hover {
+  color: #24ccaa;
+  border: 0.25rem solid #24ccaa;
+  background: linear-gradient(90deg, #fff, #f0f0f0);
 }
 
 .pokemon-name {
   font-size: 3rem;
   font-weight: bold;
   margin-bottom: 1rem;
-}
-
-@keyframes jump {
-  0% { transform: translateY(0); }
-  50% { transform: translateY(-10px); } 
-  100% { transform: translateY(0); }
-}
-
-::-webkit-scrollbar {
-  width: 1rem;
-  border-radius: 1rem;
-}
-
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-  border-radius: 1rem;
-}
-
-::-webkit-scrollbar-thumb {
-  background: linear-gradient(#a2db95, #24ccaa);
-  border-radius: 1rem;
-  transition: all .5s;
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background: linear-gradient(90deg, #a2db95, #24ccaa);
 }
